--- a/service-product-dev.yml
+++ b/service-product-dev.yml
@@ -1,8 +1,9 @@
 server:
   port: 8001
+management:
+  security:
+    enabled: false
 spring:
-  application:
-    name: service-product
   datasource:
     # driver-class-name: com.mysql.jdbc.Driver
     username: root
@@ -13,10 +14,3 @@ spring:
     port: 6379
   jpa:
     show-sql: true
-eureka:
-  instance:
-    prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ip-address}:${server.port} # 显示ip和端口号
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
